--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             width: 100%;
             bottom: 0;
         }
+		footer a {
+            color: red; /* Ubah warna tautan menjadi putih */
+            font-weight: bold; /* Menjadikan teks tautan menjadi tebal */
+        }
         /* Tambahan CSS untuk responsif Tableau */
         .tableauPlaceholder {
             width: 100%;
