--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <img src="https://imgur.com/0OO6466.jpg" alt="Foto Profil">
         <h3>Intelijen Kejaksaan Negeri Aceh Utara</h3>
         <p>
-            Ini adalah Project dari Seksi Intelijen Kejaksaan Negeri Aceh Utara yang bertugas dalam bidang investigasi dan pengelolaan informasi untuk membantu proses hukum di wilayah ini. Saya memiliki keahlian dalam analisis data, serta memanfaatkan teknologi untuk mendukung tugas-tugas intelijen.
+            Ini adalah Project dari Seksi Intelijen Kejaksaan Negeri Aceh Utara yang bertugas dalam bidang investigasi dan pengelolaan informasi untuk membantu proses hukum di wilayah ini dan menganalisis data, serta memanfaatkan teknologi untuk mendukung tugas-tugas intelijen.
         </p>
     </div>
 </section>
