--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <img src="https://imgur.com/0OO6466.jpg" alt="Foto Profil">
         <h3>Intelijen Kejaksaan Negeri Aceh Utara</h3>
         <p>
-            Ini adalah Project dari Seksi Intelijen Kejaksaan Negeri Aceh Utara yang bertugas dalam bidang investigasi dan pengelolaan informasi untuk membantu proses hukum di wilayah ini dan menganalisis data, serta memanfaatkan teknologi untuk mendukung tugas-tugas intelijen. Perencanaan, pelaksanaan dan pengendalian teknis kegiatan dan operasi intelijen Kejaksaan berupa penyelidikan, pengamanan dan penggalangan untuk mendukung kebijakan penegakan hukum baik preventif maupun represif mengenai upaya penyelamatan pemulihan keuangan negara yang meliputi sektor keuangan dan kekayaan negara, pengadaan barang/jasa pemerintah, pelayanan publik dan sektor lainnya
+            Ini adalah Project dari Seksi Intelijen Kejaksaan Negeri Aceh Utara yang bertugas dalam bidang investigasi dan pengelolaan informasi untuk membantu proses hukum di wilayah ini dan menganalisis data, serta memanfaatkan teknologi untuk mendukung tugas-tugas intelijen. Perencanaan, pelaksanaan dan pengendalian teknis kegiatan dan operasi intelijen Kejaksaan berupa penyelidikan, pengamanan dan penggalangan untuk mendukung kebijakan penegakan hukum baik preventif maupun represif mengenai upaya penyelamatan pemulihan keuangan negara yang meliputi sektor keuangan dan kekayaan negara, pengadaan barang/jasa pemerintah, pelayanan publik dan sektor lainnya.
         </p>
     </div>
 </section>
@@ -234,6 +234,15 @@
         <p class="quote">“Kebebasan dan keadilan tidak bisa dipecah-pecah untuk disesuaikan dengan kenyamanan politik.”</p>
         <p class="author">— Coretta Scott King</p>
     </div>
+    <div class="quote-container">
+        <p class="quote">“Kebebasan dan keadilan tidak bisa dipecah-pecah untuk disesuaikan dengan kenyamanan politik.”</p>
+        <p class="author">— Coretta Scott King</p>
+    </div>
+    <div class="quote-container">
+        <p class="quote">“Kebebasan dan keadilan tidak bisa dipecah-pecah untuk disesuaikan dengan kenyamanan politik.”</p>
+        <p class="author">— Coretta Scott King</p>
+    </div>
+	
 </section>
 
 <script>
